# Linux-Low-Latency-IPC

./: CMakeLists.txt  README.md  messengerMain.cpp  receiverMain.cpp  runDebugCMake.sh  runReleaseCMake.sh
Message/: Message.h  message.h
Message_Queue/Reader/: ReaderQueue.cpp  ReaderQueue.h
Message_Queue/Writer/: WriterQueue.cpp  WriterQueue.h
Messenger/: messenger.cpp  messenger.h
MultiBuffer/: MultiBuffer.h  reader.cpp  writer.cpp
Reader/: ReaderMemory.cpp  ReaderMemory.h  ReaderQueue.cpp  ReaderQueue.h  reader.cpp  reader.h  readerMain.cpp
Receiver/: receiver.cpp  receiver.h
RingBuffer/: RingBufferWriter.h
Ring_Buffer/: RingBufferReader.h  RingBufferWriter.h
Ring_Buffer/Reader/: ReadRingBuffer.cpp  RingBufferReader.h
Ring_Buffer/Writer/: RingBufferWriter.h  WriteRingBuffer.cpp
SingleBuffer/: SingleBuffer.h  reader.cpp  writer.cpp
Single_Memory/Reader/: ReadSharedMemory.cpp  SharedMemoryReader.h
Single_Memory/Writer/: SharedMemoryWriter.h  WriteSharedMemory.cpp
Tests/: multiBufferTest.cpp  singleBufferTest.cpp
Utils/: SpinLock.h  Utils.h  utils.h
Writer/: WriterMemory.cpp  WriterMemory.h  WriterQueue.cpp  WriterQueue.h  writer.cpp  writer.h  writerMain.cpp
